# Web-2

./: README.md  pyproject.toml
docker/: Dockerfile  requirements.txt
personal_assistant/: exception.py
